# spsp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  idf_component.yml
.github/workflows/: build_espidf_examples.yml  build_examples.yml  build_linux.yml  test.yml
common/include/: spsp_bridge.hpp  spsp_client.hpp  spsp_common.hpp  spsp_espnow.hpp  spsp_espnow_adapter.hpp  spsp_espnow_adapter_if.hpp  spsp_espnow_packet.hpp  spsp_espnow_ser_des.hpp  spsp_espnow_types.hpp  spsp_exception.hpp  spsp_layers.hpp  spsp_local_addr.hpp  spsp_local_addr_mac.hpp  spsp_local_message.hpp  spsp_mqtt.hpp  spsp_node.hpp  spsp_timer.hpp  spsp_version.hpp  spsp_wifi_channel_restrictions.hpp  spsp_wifi_country_restrictions.hpp  spsp_wifi_espnow.hpp  spsp_wifi_espnow_if.hpp
common/private_include/: spsp_chacha20.hpp
common/src/: espnow.cpp  espnow_ser_des.cpp  local_addr_mac.cpp
esp-idf/: CMakeLists.txt
esp-idf/include/: spsp_wifi.hpp
esp-idf/private_include/: logger.hpp  spsp_logger.hpp  wifi.hpp
esp-idf/src/: bridge.cpp  bridge_sub_db.cpp  client.cpp  client_sub_db.cpp  espnow.cpp  local_addr_mac.cpp  logger.cpp  mqtt.cpp  timer.cpp  wifi.cpp
espidf/include/: spsp.hpp  spsp_espnow_adapter.hpp  spsp_espnow_esp_adapter.hpp  spsp_logger.hpp  spsp_wifi.hpp  spsp_wifi_station.hpp
espidf/src/: espnow.cpp  espnow_adapter.cpp  espnow_esp_adapter.cpp  local_addr_mac.cpp  mqtt.cpp  wifi.cpp  wifi_station.cpp
examples/esp-idf-bridge/: CMakeLists.txt  README.md
examples/esp-idf-client/: CMakeLists.txt  README.md
include/: spsp.hpp  spsp_bridge.hpp  spsp_bridge_sub_db.hpp  spsp_client.hpp  spsp_client_bridge.hpp  spsp_client_sub_db.hpp  spsp_espnow.hpp  spsp_interfaces.hpp  spsp_layers.hpp  spsp_local_addr.hpp  spsp_local_addr_mac.hpp  spsp_local_message.hpp  spsp_message.hpp  spsp_mqtt.hpp  spsp_node.hpp  spsp_nodes.hpp  spsp_timer.hpp  spsp_version.hpp
include/common/: spsp_bridge.hpp  spsp_bridge_sub_db.hpp  spsp_client.hpp  spsp_client_sub_db.hpp  spsp_common.hpp  spsp_espnow.hpp  spsp_espnow_adapter_if.hpp  spsp_espnow_packet.hpp  spsp_espnow_ser_des.hpp  spsp_espnow_types.hpp  spsp_layers.hpp  spsp_local_addr.hpp  spsp_local_broker.hpp  spsp_local_message.hpp  spsp_mqtt.hpp  spsp_mqtt_adapter_if.hpp  spsp_mqtt_types.hpp  spsp_node.hpp  spsp_random_if.hpp  spsp_timer.hpp  spsp_version.hpp  spsp_wifi_espnow_if.hpp  spsp_wifi_types.hpp  spsp_wildcard_trie.hpp
include/espidf/: spsp.hpp  spsp_espnow_adapter.hpp  spsp_mqtt_adapter.hpp  spsp_random.hpp  spsp_wifi_station.hpp
include/linux/: spsp.hpp  spsp_espnow_adapter.hpp  spsp_espnow_packet_ieee80211.hpp  spsp_logger.hpp  spsp_mac_setup.hpp  spsp_mqtt_adapter.hpp  (+2 more)
linux/: CMakeLists.txt  bridge_espnow.cpp  bridge_espnow_config.ini.example  ini.h
private_include/: logger.hpp  spsp_chacha20.hpp
spsp-esp-idf/: CMakeLists.txt  idf_component.yml
src/: node.cpp  spsp_espnow.cpp
test/: CMakeLists.txt
test/include/: spsp_logger.hpp  spsp_random.hpp
test/src/: local_addr_mac.cpp  mac.cpp  mqtt.cpp  timer.cpp
test/tests/: bridge.cpp  client.cpp  espnow.cpp  espnow_ser_des.cpp  local_addr_mac.cpp  local_broker.cpp  mqtt.cpp  test_local_addr_mac.cpp  timer.cpp  wildcard_trie.cpp
(+103 files in other folders)
